# ros_xp_msstyles

./: README.md
NeutrinoBlue/neutrino.msstyles/: CMakeLists.txt  neutrino.rc
NeutrinoBlue/neutrino.msstyles/lang/: en-US.rc
NeutrinoBlue/neutrino.msstyles/textfiles/: EXTRALARGEBLUE.INI  LARGEFONTSBLUE.INI  NORMALBLUE.INI  THEMES.INI
haikustyle/: CMakeLists.txt  reactos.dff.in
haikustyle/haikustyle.msstyles/: CMakeLists.txt  haikustyle.rc
haikustyle/haikustyle.msstyles/lang/: en-US.rc
haikustyle/haikustyle.msstyles/textfiles/: EXTRALARGEBLUE.INI  LARGEFONTSBLUE.INI  NORMALBLUE.INI  THEMES.INI
luna_original_template/: CMakeMacros.cmake
luna_original_template/luna.msstyles/: CMakeLists.txt  luna.rc
luna_original_template/luna.msstyles/lang/: en-US.rc
luna_original_template/luna.msstyles/textfiles/: EXTRALARGEBLUE.INI  LARGEFONTSBLUE.INI  NORMALBLUE.INI
